# harkdc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  base.mk  c-cpp.mk  config.mk  flycheck.el  hbuild.sh  upload.mk
cmake/: harkd-deps.cmake  harkdc-config.cmake.in  libhitz.cmake  libpthread.cmake  libserialport.cmake  libtcl.cmake  libxlsxwriter.cmake  libz.cmake
ext/: download.sh
src/: CMakeLists.txt  Makefile  harkd-core.c  harkd-device.h  harkd-hitz.c  harkd-main.c  harkd-serial.c  harkd-table.c  harkd-test.h  harkd.c  harkd.h  harkd.rc  main.c  makeh  test-harkdc
src/devices/: array.c  checksum.c  checksum.h  checksum_flymake.h  devices.h  devices.lst  devices.sh  example.c  mpd.c  protocols.c  protocols.h
src/tests/: dcdc.c  example.c  tests.h  tests.sh
